# asobi

./: Cargo.toml  README.md
plugins/: edit_file.wasm  patch_file.wasm
plugins/edit_file/: Cargo.toml
plugins/edit_file/src/: lib.rs
plugins/patch_file/: Cargo.toml
plugins/patch_file/src/: lib.rs
src/: agent.rs  app.rs  config.rs  history.rs  main.rs  tools.rs  wasm_tool.rs
tests/: plugin_integration.rs
