[package]
name = "asobi"
version = "0.1.0"
edition = "2024"
description = "A minimal coding agent powered by AWS Bedrock"

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.128.0"
aws-smithy-types = { version = "1.4.7", features = ["serde-serialize", "serde-deserialize"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
home = "0.5.12"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
